--- a/app-pod.yaml
+++ b/app-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-demo
+  name: pod-nginx
   annotations: 
     app: demo
   labels:
@@ -10,12 +10,12 @@ metadata:
   namespace: default
 spec:
   containers:
-  - name: pod-demo-container
+  - name: pod-nginx-container
     image: nginx:latest
     imagePullPolicy: IfNotPresent
-    restartPolicy: Always
     workingDir: /root
     ports:
+    - name: nginx-port
       containerPort: 80
       hostIP: 0.0.0.0
       hostPort: 80
@@ -27,10 +27,11 @@ spec:
       requests:
         memory: "100Mi"
         cpu: 1
+  restartPolicy: Always      
   hostname: pod-demo
   nodeName: k8s-master
   nodeSelector:
-    type: app
+    kubernetes.io/hostname: k8s-master
 
 
 
