--- a/controller/replicaSet-demo.yaml
+++ b/controller/replicaSet-demo.yaml
@@ -13,8 +13,9 @@ spec:
   template: 
     metadata:
       name: myapp-pod
-      release: stable
-      env: test
+      labels:
+        release: stable
+        env: test
     spec:
       containers:
       - name: myapp-container
