--- a/controller/replicaSet-demo.yaml
+++ b/controller/replicaSet-demo.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: ReplicaSet
 metadata: 
   name: rs-demo
-  namsespace: default
+  namespace: default
 spec:
   replicas: 2
   minReadySeconds: 10
