--- a/controller/daemonSet-demo.yaml
+++ b/controller/daemonSet-demo.yaml
@@ -31,8 +31,9 @@ metadata:
 spec:
   selector: 
     matchLabels:
-      app: filebeat
-      release: stable
+      labels:
+        app: filebeat
+        release: stable
   template:
     metadata:
       name:  myapp-daemonset
