--- a/controller/daemonSet-demo.yaml
+++ b/controller/daemonSet-demo.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: redis-container
-        image: redis:4.0-apline
+        image: redis:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: redis
