--- a/ingress/ingress-tomcat.yaml
+++ b/ingress/ingress-tomcat.yaml
@@ -1,40 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  name: myapp-deploy
+  name: tomcat-deploy
   namespace: default
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: myapp
+      app: tomcat
   template:
     metadata:
       labels:
-        app: myapp
+        app: tomcat
     spec:
       containers:
-      - name: myapp-containers
-        image: ikubernetes/myapp:v1
+      - name: tomcat-container
+        image: tomcat:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
-          containerPort: 80 
+          containerPort: 8080 
 
 ---
 apiVersion: v1
 kind: Service
 metadata: 
-  name: myapp-svc
+  name: tomcat-svc
   namespace: default
 spec: 
   selector:
-    app: myapp
+    app: tomcat
   type: ClusterIP
   ports:
-  - name: myapp
-    port: 80
-    targetPort: 80
+  - name: tomcat-http
+    port: 8080
+    targetPort: 8080
 
 ---
 apiVersion: extensions/v1beta1
@@ -45,6 +45,7 @@ metadata:
   annotations:
     kubersnetes.io/ingress.class: "nginx"
 spec: 
+  host: tomcat.k8s.com
   backend:
     serviceName: myapp-svc
-    servicePort: 80
+    servicePort: 8080
